# lib-avstack-api

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  environment.yml  postprocess_carla_objects.py  pyproject.toml  run_all.sh  sub_mkdocs.yml
avapi/: __init__.py  _dataset.py  _nu_base.py  _nutonomy.py  dataset.py  legacy.py  utils.py
avapi/carla/: __init__.py  bootstrap.py  dataset.py  display.py  ego.py  leaderboard.py  manager.py  objects.py  recorder.py  sensors.py  tools.py  utils.py
avapi/carla/config/: __init__.py  default_client.yml  default_display.yml  default_ego.yml  default_infrastructure.yml  default_npc.yml  default_recorder.yml  default_transform.yml  default_world.yml
avapi/carla/config/scenarios/: base_autopilot.yml  base_av.yml  capture_data_multi_agent.yml  capture_data_multi_sensor.yml  collaborative_capture_data.yml  collaborative_simple.yml  data_capture.yml  follow_1.yml  overtake_1.yml  roaming.yml  simple_two_vehicles.yml
avapi/carla/config/scenarios/old/: __jam_1.yml
avapi/carla/config/sensors/: default_camera.yml  default_depthcam.yml  default_gnss.yml  default_imu.yml  default_lane_deviation.yml  default_lidar.yml  default_radar.yml  default_semsegcam.yml
avapi/carla/simulator/: bootstrap.py  display.py  ego.py  leaderboard.py  manager.py  recorder.py  sensors.py  tools.py  utils.py
avapi/evaluation/: __init__.py  base.py  metrics.py  ospa.py  perception.py  prediction.py  tracking.py  trades.py
avapi/evaluation/metrics/: plotting.py
avapi/kitti/: __init__.py  _parseTrackletXML.py  dataset.py  legacy.py
avapi/mot15/: __init__.py  dataset.py
avapi/nuimages/: __init__.py  dataset.py
avapi/nuscenes/: __init__.py  dataset.py
avapi/opv2v/: __init__.py  dataset.py
avapi/rccars/: __init__.py  dataset.py
avapi/ugv/: __init__.py  dataset.py
avapi/visualize/: __init__.py  base.py  movie.py  perception.py  replay.py  snapshot.py  tracking.py
data/: MOT15  README.md  add_custom_symlinks.sh  data  download_CARLA_datasets.sh  download_KITTI_ImageSets.sh  download_KITTI_object_data.sh  download_KITTI_raw_data.sh  download_KITTI_raw_tracklets.sh  download_MOT15_dataset.sh  download_OPV2V_dataset.sh  download_nuScenes_CAN.sh  download_nuScenes_mini.sh  process_OPV2V_dataset.sh  remove_custom_symlinks.sh
hooks/: pre-commit
notebooks/: 0-split-kitti-train-val.ipynb  0-test-carla.ipynb  0-test-kitti-api.ipynb  0-test-mot15.ipynb  0-test-nuscenes.ipynb  0-test-opv2v.ipynb  split_kitti_train_val.ipynb  test-kitti-api.ipynb  test-nuscenes.ipynb  verify-ad-rss.ipynb  verify_ad_rss.ipynb
tests/: test_carla.py  test_kitti.py  test_nuimages.py  test_nuscences.py
tests/evaluation/: test_evaluation.py  test_ospa.py
tests/visualize/: test_visualize_percep.py
