[project]
name = "avstack-api"
version = "0.1.0-alpha.1"
description = "API library for autonomous vehicle development"
authors = [{ name = "Spencer Hallyburton", email = "spencer.hallyburton@duke.edu" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "kitti",
    "nuscenes",
    "waymo",
    "carla",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "tabulate~=0.9.0",
    "nuscenes-devkit~=1.1.9",
    "matplotlib~=3.7",
    "open3d>=0.17.0,<0.18",
    "avstack-core",
]

[project.urls]
Homepage = "https://avstack.org"
Repository = "https://github.com/avstack-lab/avstack-api"

[dependency-groups]
dev = [
    "gdown>=4.6.4,<5",
    "ipywidgets~=8.0",
    "jupyter>=1.0.0,<2",
]
test = [
    "snakeviz>=2.1.1,<3",
    "pytest>=7,<8",
    "pytest-cov>=4,<5",
    "bandit~=1.7",
    "black[jupyter]~=22.12.0",
    "mypy>=0,<1",
    "isort~=5.11",
    "flake8~=5.0",
    "autoflake>=1,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
explicity = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
# avstack-core = { path = "../avstack-core", editable = true }
avstack-core = { index = "testpypi" }

[tool.hatch.build.targets.sdist]
include = [
    "avapi",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
include = [
    "avapi",
    "CHANGELOG.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s -l"
testpaths = [
    "tests",
    "integration",
]
